updated colors and add privacy

--- a/Elizabeth-form.html
+++ b/Elizabeth-form.html
@@ -43,7 +43,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(58, 58, 58, 0.6);
+        background-color: white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -60,7 +60,7 @@
       }
       .welcome-modal-content,
       .pre-quiz-modal-content {
-        background-color: var(--container-bg);
+        background-color: #e7dfd5;
         padding: 30px 35px;
         border-radius: 8px;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
@@ -966,6 +966,10 @@
             >
             <div id="location-container"></div>
           </div>
+          <p style="font-size: 0.85em; color: var(--muted-color); margin-top: 15px; text-align: center;">
+            <span lang="en">Privacy Notice: Your responses will be kept confidential and used only for research/analysis purposes. No personally identifiable information will be shared.</span>
+            <span lang="zh-Hant">隱私聲明：您的回覆將被保密，僅用於研究或分析用途。問卷不會分享任何可識別個人身份的資訊。</span>
+          </p>
           <div class="pre-quiz-error-message" id="preQuizErrorMsg">
             <span lang="en">Please fill in all fields.</span
             ><span lang="zh-Hant">請填寫所有欄位。</span>
